<resources>
    <string name="app_name">Giriş sayfası</string>
    <string name="name">Ad Soyad</string>
    <string name="add">KİŞİ EKLE</string>
    <string name="logIn">Giriş Yap</string>
    <string name="please_login">Gün içinde ilaç saatlerinize alarm kurabilmek için lütfen giriş yapınız.</string>
    <string name="age">Yaş : </string>
    <string name="weight">Kilo : </string>
    <string name="height">Boy : </string>
    <string name="gender">Cinsiyet : </string>
    <string name="next">İLERİ</string>
    <string name="medicine">İlaç ismi</string>
    <string name="repeat">Tekrar</string>
    <string name="monday">Her Pazartesi</string>
    <string name="tuesday">Her Salı</string>
    <string name="wednesday">Her Çarşamba</string>
    <string name="thursday">Her Perşembe</string>
    <string name="friday">Her Cuma</string>
    <string name="sat">Her Cumartesi</string>
    <string name="sun">Her Pazar</string>
    <string name="hello">UNUTMA</string>
    <string name="coverLetter">Günün yoğunluğunda unutulan birçok şey varken bunlardan biri de sağlığınız olmasın.! Bu uygulama sizin yerinize sağlığınız için ilaç saatlerinizi size hatırlatır.</string>
    <string name="welcome">HOŞ GELDİNİZ</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>
    <string name="channel_name">Simple Alarms</string>
    <string name="closeAlarm">KAPAT</string>
    <string name="saveAlarm">kaydet</string>
</resources>