<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Repeat"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    android:id="@+id/activity_repeat">

    <Switch
        android:id="@+id/swP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textOff="OFF"
        android:textOn="ON"/>
    <Switch
        android:id="@+id/swS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <Switch
        android:id="@+id/swCm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <Switch
        android:id="@+id/swPs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <Switch
        android:id="@+id/swC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <Switch
        android:id="@+id/swCmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <Switch
        android:id="@+id/swPz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

</LinearLayout>
